--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,3 +1,13 @@
 .button {
-  background: transparent;
+  background-color: var(--accent-color);
+  font-family: var(--main-font);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 18px;
+  border: none;
+  text-decoration: none;
+  display: inline-block;
+  padding: 14px 72px;
+  color: var(--secondary-color);
+  text-transform: uppercase;
 }
