Стилизация страниц проекта

--- a/source/sass/blocks/catalog__list.scss
+++ b/source/sass/blocks/catalog__list.scss
@@ -4,14 +4,48 @@
   padding: 0;
 }
 
+.catalog__item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 280px;
+  border-bottom: 1px solid #ededed;
+  padding-bottom: 23px;
+}
+
+.catalog__container {
+  display: flex;
+  align-items: center;
+  width: 280px;
+}
+
 .catalog__link {
   display: block;
   text-decoration: none;
 }
 
+.catalog__product-info {
+  width: 142px;
+}
+
+.catalog__product-photo {
+  order: -1;
+  padding: 14px 36px;
+}
+
+.catalog__stats {
+  display: grid;
+  grid-template-columns: 1fr auto;
+  grid-template-rows: auto auto auto;
+}
+
 .catalog__title {
   font-family: var(--main-font);
   color: var(--title-color);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  margin-right: 64px;
 }
 
 .stats__info,
@@ -43,10 +77,14 @@
   border: 0;
   text-decoration: none;
   display: inline-block;
-  padding: 10px 72px;
+  padding: 10px 15px;
   text-transform: uppercase;
   background-color: var(--accent-color);
   color: var(--secondary-color);
+  width: 280px;
+  box-sizing: border-box;
+  text-align: center;
+
 
   &.--secondary-color {
     background-color: var(--bg-color-accent);
