--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -1,7 +1,8 @@
 
 .main-header {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px 20px 17px;
+  flex-direction: column;
+  justify-content: center;
+  // align-items: center;
+  // padding: 10px 20px 17px;
 }
