--- a/source/sass/blocks/main-nav__list.scss
+++ b/source/sass/blocks/main-nav__list.scss
@@ -1,3 +1,7 @@
+.main-nav__wrapper {
+  display: none;
+}
+
 .main-nav__toggle {
   background-color: transparent;
   border: none;
@@ -10,5 +14,27 @@
 }
 
 .main-nav__list {
-  display: none;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.main-nav__link {
+  text-decoration: none;
+  display: block;
+  font-family: var(--main-font);
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 20px;
+  color: var(--primary-color);
+
+  @media (--not-mobile) {
+    display: flex;
+    flex-direction: row;
+    margin-right: 35px;
+  }
+}
+
+.main-nav__link:last-child {
+  margin-right: 0;
 }
