--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer page__centerer">
 
   <div class="footer__logo-container">
     <a class="footer__logo" href="index.html" {% if permalink=="index.html" %}aria-current="page" {% endif %}>
