--- a/source/sass/blocks/main-header__logo.scss
+++ b/source/sass/blocks/main-header__logo.scss
@@ -1,13 +1,3 @@
 .main-header__logo {
-  text-decoration: none;
-}
-
-.main-header__logo-icon {
-  width: 34px;
-  height: 38px;
-}
-
-.main-header__logo-title-img {
-  width: 101px;
-  height: 18px;
+  margin-left: 20px;
 }
