--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -1,8 +1,16 @@
 .page {
   font-family: var(--main-font);
+  // margin: 0 auto;
 }
 
 .page__body {
   margin: 0;
+  padding: 0;
   min-width: 320px;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
