--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,27 +1,28 @@
-@use "./global/global.scss";
-@use "./global/variables.scss";
-@use "./global/fonts.scss";
-@use "./blocks/button.scss";
-@use "./blocks/main-header.scss";
-@use "./blocks/main-nav__list.scss";
-@use "./blocks/main-header__logo.scss";
-@use "./blocks/main-header__banner.scss";
-@use "./blocks/main-content__title.scss";
-@use "./blocks/main-content__slogan.scss";
-@use "./blocks/main-content__product-img.scss";
-@use "./blocks/programs.scss";
-@use "./blocks/page__centerer.scss";
-@use "./blocks/page.scss";
-@use "./blocks/principles.scss";
-@use "./blocks/motivation.scss";
-@use "./blocks/contacts.scss";
-@use "./blocks/footer.scss";
-@use "./blocks/footer__logo.scss";
-@use "./blocks/footer-social.scss";
-@use "./blocks/footer-copyright.scss";
-@use "./blocks/catalog__title.scss";
-@use "./blocks/catalog__list.scss";
-@use "./blocks/goods.scss";
-@use "./blocks/profile.scss";
-@use "./blocks/form__legend.scss";
+@import "./global/global.scss";
+@import "./global/variables.scss";
+@import "./global/fonts.scss";
+@import "./blocks/button.scss";
+@import "./blocks/main-header.scss";
+@import "./blocks/main-nav__list.scss";
+@import "./blocks/main-header__logo.scss";
+@import "./blocks/main-header__banner.scss";
+@import "./blocks/main-content__title.scss";
+@import "./blocks/main-content__slogan.scss";
+@import "./blocks/main-content__product-img.scss";
+@import "./blocks/programs.scss";
+@import "./blocks/page__centerer.scss";
+@import "./blocks/page.scss";
+@import "./blocks/principles.scss";
+@import "./blocks/motivation.scss";
+@import "./blocks/contacts.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/footer__logo.scss";
+@import "./blocks/footer-social.scss";
+@import "./blocks/footer-copyright.scss";
+@import "./blocks/catalog__title.scss";
+@import "./blocks/catalog__list.scss";
+@import "./blocks/goods.scss";
+@import "./blocks/promotions.scss";
+@import "./blocks/profile.scss";
+@import "./blocks/form__legend.scss";
 
