--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -1,19 +1,23 @@
-<header class="main-header">
+<header class="main-header page__centerer">
   <a class="main-header__logo" href="index.html" {% if permalink=="index.html" %}aria-current="page" {% endif %}>
-    <img class="main-header__logo-icon" src="img/logo-mobile.png" width="34" height="38" alt="Знак Cat Energy." />
-    <img class="main-header__logo-title-img" src="img/logo-text.svg" width="101" height="18" alt="Логотип Cat Energy." />
+    <picture>
+      <source media="(min-width:--not-mobile)" srcset="../img/logo-tablet.png">
+      <source media="(min-width:1200px)" srcset="../img/logo-desktop.png">
+      <img src="../img/mobile-logo.png" alt="Cat Energy logo" style="width:auto;" width="191" height="38">
+    </picture>
   </a>
-  <nav class="main-nav">
+  <nav class="main-nav main-nav--closed">
     <button class="main-nav__toggle" type="button">
       <img src="icons/burger.svg" alt="Открыть меню." class="main-nav__icon-burger">
-      <span class="visually-hidden">Открыть меню</span>
     </button>
-    <ul class="main-nav__list">
-      {% for page in pages %}
-      <li class="main-nav__item">
-        <a class="main-nav__link" href="{{ page.path }}" {% if permalink==page.path %} aria-current="page" {% endif %}>{{ page.name }}</a>
-      </li>
-      {% endfor %}
-    </ul>
+    <div class="main-nav__wrapper">
+      <ul class="main-nav__list">
+        {% for page in pages %}
+        <li class="main-nav__item">
+          <a class="main-nav__link" href="{{ page.path }}" {% if permalink==page.path %} aria-current="page" {% endif %}>{{ page.name }}</a>
+        </li>
+        {% endfor %}
+      </ul>
+    </div>
   </nav>
 </header>
