--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -2,7 +2,7 @@
 .main-header {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  // align-items: center;
-  // padding: 10px 20px 17px;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px 17px;
 }
