--- a/source/sass/blocks/main-nav__list.scss
+++ b/source/sass/blocks/main-nav__list.scss
@@ -1,6 +1,6 @@
-.main-nav__wrapper {
-  display: none;
-}
+// .main-nav__wrapper {
+//   display: none;
+// }
 
 .main-nav__toggle {
   background-color: transparent;
@@ -17,6 +17,7 @@
   margin: 0;
   padding: 0;
   list-style: none;
+  display: none;
 }
 
 .main-nav__link {
