Исправляет стилизацию страниц

--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,6 +1,6 @@
 .button {
   background-color: var(--accent-color);
-  font-family: var(--main-font);
+  font-family: var(--accent-font);
   font-weight: 500;
   font-size: 14px;
   line-height: 18px;
