--- a/source/sass/blocks/catalog__title.scss
+++ b/source/sass/blocks/catalog__title.scss
@@ -1,5 +1,5 @@
 .catalog-content__title {
-  font-family: var(--main-font);
+  font-family: var(--accent-font); //changed
   font-size: var(--title-fs);
   font-weight: 400;
   line-height: var(--title-fs);
