--- a/source/sass/blocks/goods.scss
+++ b/source/sass/blocks/goods.scss
@@ -1,5 +1,5 @@
 .goods__title {
-  font-family: var(--main-font);
+  font-family: var(--accent-font);
   font-size: 24px;
   line-height: 24px;
   color: var(--primary-color);
@@ -25,7 +25,7 @@
 }
 
 .more-goods__title {
-  font-family: var(--main-font);
+  font-family: var(--accent-font);
   font-size: 16px;
   line-height: 16px;
   color: var(--title-color);
@@ -48,4 +48,3 @@
   width: 30%;
   margin-right: auto;
 }
-
