--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,6 +1,6 @@
 :root {
-  --main-font: "Oswald", sans-serif;
-  --accent-font: arial, sans-serif;
+  --main-font: arial, sans-serif;
+  --accent-font: "Oswald", impact, sans-serif;
 
   --primary-color: #000000;
   --secondary-color: #ffffff;
