--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -4,28 +4,30 @@
 
 .contacts__wrapper {
   display: flex;
+  justify-content: space-between;
   align-items: center;
   padding: 26px 20px;
 }
 
 .contacts__advertisement {
-  font-family: var(--main-font);
+  font-family: var(--accent-font); //changed
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
   color: #111111;
-  min-width: 139px;
+  max-width: 139px;
 }
 
 .contacts__address {
-  font-family: var(--accent-font);
+  font-family: var(--main-font);
   font-size: 14px;
   font-style: normal;
   line-height: 20px;
   color: var(--description-color);
+  max-width: 139px;
 }
 
-.contacts_map {
+.contacts__map {
   width: 100%;
   height: 100%;
   object-fit: cover;
