--- a/source/sass/blocks/main-nav__list.scss
+++ b/source/sass/blocks/main-nav__list.scss
@@ -23,7 +23,7 @@
 .main-nav__link {
   text-decoration: none;
   display: block;
-  font-family: var(--main-font);
+  font-family: var(--accent-font); //changed
   font-size: 20px;
   font-weight: 500;
   line-height: 20px;
