--- a/source/sass/blocks/motivation.scss
+++ b/source/sass/blocks/motivation.scss
@@ -3,7 +3,7 @@
 }
 
 .motivation__title {
-  font-family: var(--main-font);
+  font-family: var(--accent-font); //changes
   font-size: var(--title-fs);
   line-height: 40px;
   color: var(--primary-color);
@@ -22,7 +22,14 @@
   justify-content: center;
 }
 
-.motivation__item--module {
+.motivation__name,
+.motivation__value {
+  font-family: var(--accent-font); //changed
+  font-size: 14px;
+  line-height: 20px;
+}
+
+.motivation__item--badge {
   position: relative;
 
   &:first-child {
@@ -30,7 +37,7 @@
   }
 
   .motivation__value {
-    font-family: var(--main-font);
+    font-family: var(--accent-font); //changes
     font-size: 24px;
     line-height: 24px;
     margin: 0;
@@ -39,27 +46,21 @@
     padding: 15px 15px 18px;
     min-width: 124px;
     text-align: center;
+    margin-left: 5px;
   }
 
   .motivation__name {
-    font-family: var(--accent-font);
+    position: absolute;
+    font-family: var(--main-font); //changes
     font-size: 12px;
     line-height: 12px;
     text-align: center;
-    position: absolute;
     bottom: -32px;
     left: 50%;
     transform: translateX(-50%);
     background-color: #eaeaea;
     margin-bottom: 20px;
   }
-}
-
-.motivation__name,
-.motivation__value {
-  font-family: var(--main-font);
-  font-size: 14px;
-  line-height: 20px;
 }
 
 .motivation__item:last-child {
@@ -69,12 +70,8 @@
   margin-top: 34px;
 }
 
-.motivation__value {
-  margin-left: 5px;
-}
-
 .motivation__button {
-  font-family: var(--main-font);
+  font-family: var(--accent-font); //changed
   font-size: 16px;
   line-height: 20px;
   border: none;
