--- a/source/sass/blocks/profile.scss
+++ b/source/sass/blocks/profile.scss
@@ -1,5 +1,5 @@
 .profile__title {
-  font-family: var(--main-font);
+  font-family: var(--accent-font); //changed
   font-size: var(--title-fs);
   font-weight: 400;
   line-height: 36px;
@@ -11,7 +11,7 @@
 }
 
 .profile__subtitle {
-  font-family: var(--main-font);
+  font-family: var(--accent-font); //changed
   font-size: 14px;
   font-weight: 400;
   line-height: 18px;
@@ -24,17 +24,26 @@
 .profile-form__label,
 .profile-form__input,
 .profile-form__feedback {
-  font-family: var(--main-font);
+  font-family: var(--accent-font); //changed
   font-size: 16px;
   line-height: 18px;
   color: var(--description-color);
   text-transform: uppercase;
 }
 
+.profile-form__label {
+  display: flex;
+  align-items: center;
+  margin-bottom: 12px;
+}
+
+.profile-form__label--sb {
+  justify-content: space-between;
+}
+
 .profile-form__input {
   box-sizing: border-box;
   border: 1px solid #e7e7ee;
-  margin-bottom: 12px;
   padding-top: 13px;
   padding-left: 15px;
   padding-bottom: 13px;
@@ -68,7 +77,9 @@
 .profile-form__filter-radio {
   display: flex;
   flex-direction: column;
-  border: 1px solid #e7e7e7;
+  border: 0;
+  border-top: 1px solid #e7e7e7;
+  border-bottom: 1px solid #e7e7e7;
 }
 
 .profile-form__radio {
@@ -76,7 +87,7 @@
 }
 
 .profile-form__legend {
-  font-family: var(--main-font);
+  font-family: var(--accent-font); //changed
   font-size: 24px;
   line-height: 26px;
   color: var(--primary-color);
@@ -93,7 +104,7 @@
 }
 
 .profile-form__icon-required {
-  font-family: var(--accent-font);
+  font-family: var(--main-font); //changed
   font-size: 14px;
   line-height: 16px;
 }
