--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -16,7 +16,7 @@
 }
 
 .programs__title {
-  font-family: var(--main-font);
+  font-family: var(--accent-font); //changed
   font-weight: 500;
   font-size: 24px;
   line-height: 37px;
@@ -24,7 +24,7 @@
 }
 
 .programs__description {
-  font-family: var(--accent-font);
+  font-family: var(--main-font); //changed
   color: var(--description-color);
   font-size: 14px;
   line-height: 18px;
@@ -35,7 +35,7 @@
 
 .programs__link {
   position: relative;
-  font-family: var(--main-font);
+  font-family: var(--accent-font); //changed
   font-weight: 400;
   font-size: 16px;
   line-height: 16px;
