--- a/source/sass/blocks/promotions.scss
+++ b/source/sass/blocks/promotions.scss
@@ -1,13 +1,11 @@
-.promotion {
-  margin-top: 35px;
-}
-
 .promotions__container {
   display: flex;
   flex-direction: column;
   background-image: url("../../img/bg-promotions.png");
   background-repeat: no-repeat;
+  background-size: cover;
   padding: 58px 60px 43px;
+  margin-top: 35px;
 }
 
 .promotions__icon {
