--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,7 +6,7 @@
 @import "./blocks/button.scss";
 @import "./blocks/visually-hidden.scss";
 @import "./blocks/main-header.scss";
-@import "./blocks/main-nav__list.scss";
+@import "./blocks/main-nav.scss";
 @import "./blocks/main-header__logo.scss";
 @import "./blocks/main-content.scss";
 @import "./blocks/programs.scss";
@@ -24,4 +24,4 @@
 @import "./blocks/goods.scss";
 @import "./blocks/promotions.scss";
 @import "./blocks/profile.scss";
-@import "./blocks/form__legend.scss";
+@import "./blocks/form.scss";
