Поправки к заданию Стилизация страниц проекта

--- a/source/sass/blocks/catalog-button.scss
+++ b/source/sass/blocks/catalog-button.scss
@@ -15,7 +15,7 @@
   text-align: center;
 
 
-  &.--secondary-color {
+  &--secondary-color {
     background-color: var(--bg-color-accent);
     color: var(--description-color);
   }
