--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,12 +13,14 @@
 @import "./blocks/motivation.scss";
 @import "./blocks/contacts.scss";
 @import "./blocks/footer.scss";
-@import "./blocks/footer__logo.scss";
-@import "./blocks/catalog__title.scss";
+@import "./blocks/footer-social.scss";
+@import "./blocks/catalog-content.scss";
 @import "./blocks/catalog.scss";
 @import "./blocks/stats.scss";
-@import "./blocks/catalog__button.scss";
+@import "./blocks/catalog-button.scss";
 @import "./blocks/goods.scss";
+@import "./blocks/goods-button.scss";
+@import "./blocks/more-goods.scss";
 @import "./blocks/promotions.scss";
 @import "./blocks/profile.scss";
 @import "./blocks/form.scss";
