--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -1,29 +1,30 @@
-<footer class="footer page__centerer">
-
-  <div class="footer__logo-container">
-    <a class="footer__logo" href="index.html" {% if permalink=="index.html" %}aria-current="page" {% endif %}>
-      <img src="./img/logo-text.svg" alt="Логотип.">
-    </a>
-  </div>
-  <div class="footer-social">
-    <b class="visually-hidden">Давайте дружить!</b>
-    <ul class="footer-social__list">
-      <li class="footer-social__item">
-        <a class="footer-social__link footer-social__link--icon_tw" href="https://vk.com/htmlacademy"><span class="visually-hidden">Мы в Вконтакте</span></a>
-      </li>
-      <li class="footer-social__item">
-        <a class="footer-social__link footer-social__link--icon_yt" href="https://www.youtube.com/user/htmlacademyru"><span class="visually-hidden">Мы в Ютубе</span></a>
-      </li>
-      <li class="footer-social__item">
-        <a class="footer-social__link footer-social__link--icon_tg" href="https://t.me/htmlacademy"><span class="visually-hidden">Мы в Телеграме</span></a>
-      </li>
-    </ul>
-  </div>
-  <div class="footer__copyright">
-    <a class="footer__copyright__text" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy
-    </a>
-    <a class="footer__copyright__link" href="https://htmlacademy.ru/intensive/htmlcss">
-      <span class="visually-hidden">Авторские права</span>
-    </a>
+<footer class="footer">
+  <div class="footer__container page__centerer">
+    <div class="footer__logo-container">
+      <a class="footer__logo" href="index.html" {% if permalink=="index.html" %}aria-current="page" {% endif %}>
+        <img src="./img/logo-text.svg" alt="Логотип.">
+      </a>
+    </div>
+    <div class="footer-social">
+      <b class="visually-hidden">Давайте дружить!</b>
+      <ul class="footer-social__list">
+        <li class="footer-social__item">
+          <a class="footer-social__link footer-social__link--icon_tw" href="https://vk.com/htmlacademy"><span class="visually-hidden">Мы в Вконтакте</span></a>
+        </li>
+        <li class="footer-social__item">
+          <a class="footer-social__link footer-social__link--icon_yt" href="https://www.youtube.com/user/htmlacademyru"><span class="visually-hidden">Мы в Ютубе</span></a>
+        </li>
+        <li class="footer-social__item">
+          <a class="footer-social__link footer-social__link--icon_tg" href="https://t.me/htmlacademy"><span class="visually-hidden">Мы в Телеграме</span></a>
+        </li>
+      </ul>
+    </div>
+    <div class="footer__copyright">
+      <a class="footer__copyright-text" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy
+      </a>
+      <a class="footer__copyright-link" href="https://htmlacademy.ru/intensive/htmlcss">
+        <span class="visually-hidden">Авторские права</span>
+      </a>
+    </div>
   </div>
 </footer>
