--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -8,15 +8,20 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 280px;
+  min-width: 280px;
   border-bottom: 1px solid #ededed;
   padding-bottom: 23px;
+
+  @media (--not-mobile) {
+    min-width: 324px;
+    width: 100%;
+  }
 }
 
 .catalog__container {
   display: flex;
   align-items: center;
-  width: 280px;
+  width: 100%;
 }
 
 .catalog__link {
@@ -29,7 +34,7 @@
 }
 
 .catalog__product-photo {
-  order: -1;
+  // order: -1;
   padding: 14px 36px;
 }
 
