--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,41 +1,127 @@
-// .main-nav__wrapper {
-//   display: none;
-// }
+.main-nav {
+  @media (min-width: --not-mobile) {
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 440px;
+  }
 
-.main-nav__toggle {
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-}
-
-.main-nav__icon-burger {
-  width: 24px;
-  height: 16px;
-}
-
-.main-nav__list {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  display: none;
-}
-
-.main-nav__link {
-  text-decoration: none;
-  display: block;
-  font-family: var(--accent-font); //changed
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 20px;
-  color: var(--primary-color);
-
-  @media (--not-mobile) {
-    display: flex;
-    flex-direction: row;
-    margin-right: 35px;
+  @media (min-width: --desktop) {
+    width: 478px;
   }
 }
 
-.main-nav__link:last-child {
-  margin-right: 0;
+.main-nav__toggle {
+  display: block;
+  background-color: transparent;
+  border: none;
+  width: 24px;
+  height: 16px;
+  padding: 0;
+  cursor: pointer;
+
+  @media (--not-mobile) {
+    display: none;
+  }
+}
+
+// .main-nav--closed .main-nav__icon-burger::before {
+//   content: "";
+//   position: absolute;
+//   top: 7px;
+//   left: 0;
+//   width: 24px;
+//   height: 1.5px;
+//   background-color: var(--primary-color);
+// }
+
+.main-nav__icon-burger {
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
+  width: 24px;
+  height: 1.5px;
+  background-color: var(--primary-color);
+  cursor: pointer;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 7px;
+    left: 0;
+    width: 24px;
+    height: 1.5px;
+    background-color: var(--primary-color);
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: -7px;
+    left: 0;
+    width: 24px;
+    height: 1.5px;
+    background-color: var(--primary-color);
+  }
+}
+
+.main-nav__list {
+  display: none;
+  position: absolute;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  left: 0;
+  background-color: var(--secondary-color);
+  top: 60px;
+  width: 100%;
+  align-items: center;
+
+  @media (--not-mobile) {
+    display: flex;
+    position: relative;
+    flex-direction: row;
+    top: auto;
+  }
+}
+
+.main-nav__item {
+  padding-top: 22px;
+  padding-bottom: 24px;
+  border-top: 1px solid #e6e6e6;
+  width: 100%;
+  text-align: center;
+
+  @media (--not-mobile) {
+    border: none;
+    margin-right: 34px;
+    padding: 0;
+    width: auto;
+
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+}
+
+.main-nav__link {
+  display: block;
+  font-family: var(--accent-font); //changed
+  font-size: 20px;
+  text-decoration: none;
+  font-weight: 500;
+  line-height: 20px;
+  text-transform: uppercase;
+  color: var(--primary-color);
+
+  @media (--not-mobile) {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 24px;
+  }
+}
+
+.main-header__title img {
+  width: 101px;
+  height: 19px;
 }
