--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -9,6 +9,7 @@
   --feature-color: #d9d9d9;
 
   --title-fs: 36px;
+  --title-big: 60px;
   --details-color: #ebebeb;
   --title-color: #222222;
   --description-color: #444444;
