--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -1,11 +1,19 @@
-<header class="main-header">
+<header class="main-header page__centerer">
   <a class="main-header__logo" href="index.html" {% if permalink=="index.html" %}aria-current="page" {% endif %}>
-    <img class="main-header__logo-icon" src="img/logo-mobile.png" width="34" height="38" alt="Знак Cat Energy." />
-    <img class="main-header__logo-title-img" src="img/logo-text.svg" width="101" height="18" alt="Логотип Cat Energy." />
+    <picture>
+      <source media="(min-width: 1280px)" srcset="../img/logo-desktop.png" width="202" height="59">
+      <source media="(min-width: 768px)" srcset="../img/logo-tablet.png" width="174" height="52">
+      <img class="logo__image" src="../img/logo-mobile.png" width="34" height="39" alt="cat energy">
+    </picture>
   </a>
-  <nav class="main-nav">
+
+  <a href="#" class="main-header__title">
+    <img src="../img/logo-text.svg" alt="Cat Energy" width="101" height="19">
+  </a>
+
+  <nav class="main-nav main-nav--closed">
     <button class="main-nav__toggle" type="button">
-      <img src="../icons/burger.svg" alt="Открыть меню." class="main-nav__icon-burger">
+      <span class="main-nav__icon-burger"></span>
       <span class="visually-hidden">Открыть меню</span>
     </button>
     <ul class="main-nav__list">
@@ -15,5 +23,6 @@
       </li>
       {% endfor %}
     </ul>
+
   </nav>
 </header>
