--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -9,7 +9,8 @@
 
   @media (--not-mobile) {
     flex-direction: row;
-    min-width: 708px;
+    justify-content: space-between;
+    padding: 55px 0;
   }
 }
 
@@ -20,6 +21,11 @@
   height: 24px;
   padding-top: 20px;
   padding-bottom: 32px;
+
+  @media (--not-mobile) {
+    padding-top: 10px;
+    padding-bottom: 20px;
+  }
 }
 
 .footer__copyright {
@@ -29,6 +35,11 @@
   width: 100%;
   padding-top: 22px;
   padding-bottom: 22px;
+
+  @media (--not-mobile) {
+    width: auto;
+    padding: 0;
+  }
 }
 
 .footer__copyright-text {
@@ -38,6 +49,10 @@
   font-size: 16px;
   line-height: 19px;
   color: #444444;
+
+  @media (--not-mobile) {
+    margin-right: 22px;
+  }
 }
 
 .footer__copyright-link {
