--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -1,18 +1,78 @@
 .programs__list {
-  list-style: none;
   display: flex;
+  list-style: none;
   flex-direction: column;
   padding: 0;
+
+  @media (--desktop) {
+    flex-direction: row;
+  }
 }
 
 .programs__item {
   background-color: var(--bg-color-accent);
   padding: 20px;
   margin-bottom: 20px;
+
+  @media (--desktop) {
+    width: 50%;
+
+    &:first-child {
+      width: calc(50% - 80px);
+      margin-right: 80px;
+    }
+  }
 }
 
-.programs__item--weight-gain {
-  background-color: #d9d9d9;
+.programs__item-wrapper {
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+    background-color: var(--accent-color);
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    top: -6px;
+    left: 0;
+
+    // @media (--not-mobile) {
+    //   width: 200px;
+    //   height: 200px;
+    //   right: 0;
+    //   left: auto;
+    //   top: 50%;
+    //   transform: translateY(-50%);
+    // }
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+
+  &--slim::after {
+    background-image: url("../../icons/cat-slim.svg");
+    width: 50px;
+    height: 50px;
+    top: -7px;
+    left: 0;
+  }
+
+  &--weight-gain::after {
+    background-image: url("../../icons/cat-gain.svg");
+    width: 67px;
+    height: 50px;
+    top: 7px;
+    left: -10px;
+  }
+
+  @media (--not-mobile) {
+    max-width: 334px;
+  }
 }
 
 .programs__title {
@@ -21,6 +81,15 @@
   font-size: 24px;
   line-height: 37px;
   color: var(--primary-color);
+  text-transform: uppercase;
+  margin-left: 70px;
+
+  @media (--not-mobile) {
+    font-size: var(--title-fs);
+    line-height: 36px;
+    font-weight: 400;
+    margin-left: 0;
+  }
 }
 
 .programs__description {
@@ -31,6 +100,11 @@
   border-bottom: 1px solid var(--bg-page);
   margin: 0;
   padding-bottom: 20px;
+
+  @media (--not-mobile) {
+    font-size: 16px;
+    line-height: 24px;
+  }
 }
 
 .programs__link {
@@ -43,6 +117,11 @@
   text-decoration: none;
   display: block;
   margin-top: 20px;
+
+  @media (--not-mobile) {
+    font-size: 20px;
+    line-height: 29.64px;
+  }
 }
 
 .programs__link--arrow::after {
