--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -1,8 +1,8 @@
 <header class="main-header page__centerer">
   <a class="main-header__logo" href="index.html" {% if permalink=="index.html" %}aria-current="page" {% endif %}>
     <picture>
-      <source media="(min-width: 1280px)" srcset="../img/logo-desktop.png" width="202" height="59">
-      <source media="(min-width: 768px)" srcset="../img/logo-tablet.png" width="174" height="52">
+      <source media="(min-width: 1280px)" srcset="../img/logo-desktop.png">
+      <source media="(min-width: 768px)" srcset="../img/logo-tablet.png">
       <img class="logo__image" src="../img/logo-mobile.png" width="34" height="39" alt="cat energy">
     </picture>
   </a>
