--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,7 +7,8 @@
 @import "./blocks/visually-hidden.scss";
 @import "./blocks/main-header.scss";
 @import "./blocks/main-nav.scss";
-@import "./blocks/main-content.scss";
+@import "./blocks/main-promo.scss";
+@import "./blocks/promo.scss";
 @import "./blocks/programs.scss";
 @import "./blocks/principles.scss";
 @import "./blocks/motivation.scss";
