--- a/source/templates/_layout.twig
+++ b/source/templates/_layout.twig
@@ -15,6 +15,8 @@
   {% block main %}{% endblock %}
 
   {% include "./footer.twig" %}
+
+  <script src="./js/script.min.js"></script>
 </body>
 
 </html>
