--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -2,46 +2,121 @@
   list-style: none;
   margin: 0;
   padding: 0;
+  display: grid;
+
+  @media (--not-mobile) {
+    row-gap: 60px;
+    column-gap: 60px;
+    grid-template-columns: repeat(auto-fill, minmax(324px, 1fr));
+    // display: flex;
+    // flex-direction: row;
+    // justify-content: space-between;
+    // flex-wrap: wrap;
+  }
+
+  @media (--desktop) {
+    grid-template-columns: repeat(auto-fill, minmax(245px, 1fr));
+    row-gap: 80px;
+    column-gap: 60px;
+    // display: grid;
+    // grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    // grid-template-columns: repeat(auto-fill, minmax(245px, 1fr));
+    // column-gap: 80px;
+  }
 }
 
 .catalog__item {
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-width: 280px;
+  width: 100%;
   border-bottom: 1px solid #ededed;
   padding-bottom: 23px;
 
   @media (--not-mobile) {
+    justify-content: space-between;
+    border: none;
+    align-items: initial;
+    min-height: 511px;
     min-width: 324px;
-    width: 100%;
+    background-image: linear-gradient(to bottom, #ffffff, #ffffff 82px, #f2f2f2 82px, #f2f2f2);
+  }
+
+  @media (--desktop) {
+    min-width: 245px;
+  }
+
+  &:last-child {
+    @media (--not-mobile) {
+      background-image: none;
+    }
   }
 }
 
-.catalog__container {
-  display: flex;
-  align-items: center;
-  width: 100%;
-}
 
+.catalog__container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+
+  @media (--not-mobile) {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto;
+  }
+}
+// flex-direction: column;
+// text-align: center;
+// min-height: 430px;
+
+// display: flex;
+// align-items: center;
+// width: 100%;
 .catalog__link {
   display: block;
   text-decoration: none;
 }
 
 .catalog__product-info {
-  width: 142px;
+  @media (--not-mobile) {
+    padding-right: 36px;
+    padding-left: 36px;
+  }
 }
 
 .catalog__product-photo {
   // order: -1;
   padding: 14px 36px;
+
+  @media (--not-mobile) {
+    display: flex;
+    justify-content: center;
+  }
 }
 
 .catalog__stats {
   display: grid;
-  grid-template-columns: 1fr auto;
+  grid-template-columns: auto auto;
   grid-template-rows: auto auto auto;
+  margin: 0;
+
+  &:first-child {
+    margin-top: 20px;
+  }
+
+  &:last-child {
+    margin-bottom: 20px;
+  }
+
+  @media (--not-mobile) {
+    grid-template-columns: auto auto;
+    justify-content: space-between;
+    border-bottom: 1px solid #cdcdcd;
+  }
+
+  @media (--desktop) {
+    // grid-template-columns: auto auto;
+    min-width: 180px;
+    // justify-content: space-between;
+  }
 }
 
 .catalog__title {
@@ -51,17 +126,37 @@
   font-size: 16px;
   line-height: 20px;
   margin-right: 64px;
+
+  @media (--not-mobile) {
+    max-width: 169px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 18px;
+    font-size: 20px;
+    line-height: 24px;
+    // margin: 0;
+  }
 }
 
 .catalog__title--more {
   font-size: 16px;
   line-height: 20px;
   color: #111111;
+
+  @media (--not-mobile) {
+    font-size: 20px;
+    line-height: 22px;
+  }
 }
 
 .catalog__subtitle {
-  font-family: var(--accent-font);
+  font-family: var(--main-font);
   font-size: 12px;
   line-height: 16px;
   color: var(--description-color);
+
+  @media (--not-mobile) {
+    font-size: 16px;
+    line-height: 18px;
+  }
 }
