--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -5,6 +5,7 @@
   color: var(--primary-color);
   margin-bottom: 35px;
   border: none;
+  padding: 0;
 
   &border {
     border-top: 1px solid #d9d9d9;
