--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -24,22 +24,39 @@
   }
 }
 
-// .main-nav--closed .main-nav__icon-burger::before {
-//   content: "";
-//   position: absolute;
-//   top: 7px;
-//   left: 0;
-//   width: 24px;
-//   height: 1.5px;
-//   background-color: var(--primary-color);
-// }
+@media (--mobile) {
+  .main-nav--closed .main-nav__list {
+    display: none;
+  }
+}
+
+.main-nav--opened {
+  .main-nav__list {
+    display: flex;
+    z-index: 1;
+  }
+
+  .main-nav__icon-burger {
+    background-color: transparent;
+
+    &::before {
+      transform: rotate(45deg);
+      top: -7px;
+    }
+
+    &::after {
+      transform: rotate(-45deg);
+    }
+  }
+}
+
 
 .main-nav__icon-burger {
   position: relative;
   display: inline-block;
   vertical-align: middle;
-  width: 24px;
-  height: 1.5px;
+  width: 25px;
+  height: 1px;
   background-color: var(--primary-color);
   cursor: pointer;
 
@@ -48,8 +65,8 @@
     position: absolute;
     top: 7px;
     left: 0;
-    width: 24px;
-    height: 1.5px;
+    width: 25px;
+    height: 1px;
     background-color: var(--primary-color);
   }
 
@@ -58,14 +75,13 @@
     position: absolute;
     top: -7px;
     left: 0;
-    width: 24px;
-    height: 1.5px;
+    width: 25px;
+    height: 1px;
     background-color: var(--primary-color);
   }
 }
 
 .main-nav__list {
-  // display: none;
   position: absolute;
   flex-direction: column;
   margin: 0;
