--- a/source/sass/blocks/main-promo.scss
+++ b/source/sass/blocks/main-promo.scss
@@ -33,6 +33,10 @@
     max-width: 450px;
     padding-bottom: 41px;
   }
+
+  @media (--desktop) {
+    padding-top: 110px;
+  }
 }
 
 .main-promo__slogan {
@@ -58,6 +62,13 @@
     left: 6px;
     bottom: -58px;
     z-index: -1;
+  }
+
+  @media (--desktop) {
+    top: 0;
+    left: 507px;
+    width: 552px;
+    height: 499px;
   }
 }
 
