--- a/source/sass/blocks/more-goods.scss
+++ b/source/sass/blocks/more-goods.scss
@@ -1,29 +1,93 @@
 .more-goods__container {
   display: flex;
   flex-wrap: wrap;
+
+  @media (--not-mobile) {
+    max-width: 633px;
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+  }
+
+  @media (--desktop) {
+    margin: 0 auto;
+  }
+}
+
+.more-goods__wrapper {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+
+  @media (--not-mobile) {
+    // width: 50%;
+  }
 }
 
 .more-goods__title {
   font-family: var(--accent-font);
   font-size: 16px;
+  font-weight: 400;
   line-height: 16px;
   color: var(--title-color);
   width: 100%;
+
+  @media (--not-mobile) {
+    // width: 50%;
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  @media (--desktop) {
+    // width: 25%;
+    padding: 0;
+    margin: 0;
+  }
 }
 
 .more-goods__info,
 .more-goods__value {
-  font-family: var(--accent-font);
+  font-family: var(--main-font);
   font-size: 14px;
   line-height: 14px;
   color: var(--description-color);
+
+  @media (--not-mobile) {
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  @media (--desktop) {
+    padding: 0;
+    margin: 0;
+  }
 }
 
 .more-goods__info {
-  width: 70%;
+  // width: 70%;
+  text-align: left;
+
+  @media (--not-mobile) {
+    // width: 30%;
+    text-align: right;
+    margin-left: 30px;
+  }
+
+  @media (--desktop) {
+    // width: 20%;
+  }
 }
 
 .more-goods__value {
   width: 30%;
-  margin-right: auto;
+  text-align: right;
+
+  @media (--not-mobile) {
+    width: 15%;
+    text-align: right;
+  }
+
+  @media (--desktop) {
+    width: 10%;
+  }
 }
