--- a/source/sass/blocks/motivation.scss
+++ b/source/sass/blocks/motivation.scss
@@ -17,6 +17,8 @@
     font-size: var(--title-big);
     line-height: 60px;
     font-weight: 400;
+    padding-bottom: 63px;
+    margin: 0;
   }
 }
 
@@ -28,6 +30,7 @@
   @media (--not-mobile) {
     font-size: 16px;
     line-height: 24px;
+    margin-bottom: 54px;
   }
 }
 
@@ -73,7 +76,7 @@
     border: 1px solid #cdcdcd;
     border-radius: 3px;
     padding: 15px 15px 18px;
-    min-width: 124px;
+    min-width: 120px;
     text-align: center;
     margin-left: 5px;
 
