--- a/source/templates/_layout.twig
+++ b/source/templates/_layout.twig
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>{{ pages[pageId].name }} | Cat Energy | HTML Academy</title>
-  <link rel="stylesheet" href="./css/style.min.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body class="page__body">
@@ -16,7 +16,7 @@
 
   {% include "./footer.twig" %}
 
-  <script src="./js/script.min.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
